<resources>
    <string name="app_name">Passworx</string>
    <string name="title_home">Home</string>
    <string name="title_passwords">Passwords</string>
    <string name="title_settings">Settings</string>
    <string name="generate_tool_sub_title">Generate new secure password</string>
    <string name="generate_tool_title">Password Generator</string>
    <string name="check_tool_sub_title">Check the health of your password</string>
    <string name="check_tool_title">Password Health</string>
    <string name="title_password_generator">Password Generator</string>
    <string name="title_generate_menu">Generate</string>
    <string name="copy_password_snackbar_text">Generated password copied to clipboard</string>
    <string name="copy_password_button_text">Copy Password</string>
    <string name="add_password_button_text">Add Password</string>
    <string name="password_generator_slider_min_value">8</string>
    <string name="password_generator_slider_max_value">32</string>

    <string name="generate_password_error_Text">Couldn\'t generate password, sorry for the inconvenience :(</string>
    <string name="generate_password_use_capital_letters_setting">Include Capital Letters</string>
    <string name="generate_password_use_numbers_setting">Include Numbers</string>
    <string name="generate_password_use_capital_symbols_setting">Include Symbols</string>
    <string name="generate_password_error_dialog_title">Oops…</string>
    <string name="generate_password_error_dialog_button_text">Try Again</string>
    <string name="title_add_new_password">Add New Password</string>

    <string name="add_password_error_Text">Couldn\'t create password, please try again</string>
    <string name="add_new_password_menu_item_title">Add New Password</string>
    <string name="label_info_text">This will help you to group your passwords later on…</string>
    <string name="label_hint">Label</string>
    <string name="others_text">Others</string>
    <string name="website_or_app_name_hint">Website or App Name*</string>
    <string name="password_hint">Password*</string>
    <string name="email_or_username_hint">Email or Username*</string>
    <string name="password_details_text">Password Details</string>
    <string name="title_hint">Title*</string>
    <string name="title_browse">Browse</string>
    <string name="menu_restore_title">Restore password</string>
    <string name="menu_delete_permanently_title">Delete permanently</string>
    <string name="menu_edit_title">Edit</string>
    <string name="menu_move_to_trash_title">Move to Trash</string>
    <string name="empty_trash_message">Passwords will stay here until you delete them permanently</string>
    <string name="empty_trash_title">Trash is empty</string>
    <string name="empty_passwords_message">Store passwords in Passworx, Make them more secure</string>
    <string name="empty_passwords_title">Nothing yet…</string>
    <string name="bs_edit_password_bt_text">Edit Password</string>
    <string name="move_to_trash_dialog_message">Are you sure you want to move this password to trash?</string>
    <string name="move_to_favourites_dialog_message">Are you sure you want to move this password to Favourites?</string>
    <string name="dialog_no">No</string>
    <string name="dialog_yes">Yes</string>
    <string name="title_trash">Trash</string>
    <string name="title_favourites">Favourites</string>
    <string name="settings_language_header">Language</string>
    <string name="settings_preferences_header">Preferences</string>
    <string name="settings_appearance_header">Appearance</string>
    <string name="settings_take_screenshots">Prevent in-app screenshots</string>
    <string name="settings_unlock_with_biometrics">Unlock with Biometrics</string>

    <string name="create_master_password_title_text">Create your master password</string>
    <string name="master_password_hint">Master Password</string>
    <string name="create_master_password_button_text">Create</string>
    <string name="repeat_master_password_hint">Repeat Master Password</string>

    <string name="change_master_password_title_text">Change your master password</string>
    <string name="change_master_password_new_password_hint">New Master Password</string>
    <string name="change_master_password_current_password_hint">Current Master Password</string>
    <string name="change_master_password_repeat_new_password_hint">Repeat new Master Password</string>
    <string name="change_master_password_button_text">Change</string>
    <string name="master_password_screen_title">Access vault with your Master Password</string>
    <string name="go_to_vault_bt_text">Go to Vault</string>
    <string name="forgot_master_password_text">Forgot master password?</string>
    <string name="master_password_creation_success_message">Master password has been created successfully</string>
    <string name="master_password_change_success_message">Master password has been changed</string>
    <string name="search_hint">Search Passwords</string>

    <string name="biometric_auth_subtitle">Log in using your biometric credentials</string>
    <string name="biometric_auth_negative_button_text">Use master password</string>
    <string name="biometric_auth_title">PassworX BiometriX</string>
    <string name="settings_change_master_password_text">Change Master Password</string>
    <string name="password_copying_success">Password has been copied successfully</string>
    <string name="password_copying_error">Please restore password in order to copy it</string>
    <string name="website_or_app_name_info_text">For example: Facebook, Snapchat, Pinterest…</string>

    <string name="intro_first_step_title">Do you ever find yourself forgetting important passwords?</string>
    <string name="intro_first_step_subtitle">Passworx is here to help! We save your passwords with care, safely in the storage of your device</string>

    <string name="skip_intro_button_text">Skip</string>
    <string name="intro_get_started_button_text">Let\'s get started!</string>

    <string name="intro_second_step_title">Passworx is Free and Open-Source</string>
    <string name="intro_second_step_subtitle">This means that all the features you might need, you\'ll get for a lifetime</string>

    <string name="intro_third_step_title">With us you\'ll never forget a password anymore</string>
    <string name="intro_third_step_subtitle">Don\'t worry, You can always change these settings later</string>
    <string name="take_in_app_screenshots_info">With this turned on app can prevent system from taking screenshots or recording a video of your passwords</string>
    <string name="unlock_with_biometrics_info">With this turned on, you can unlock application with your fingerprint or face ID</string>
    <string name="generate_password_title">Generate Password</string>

    <string name="title_edit_password">Edit Password</string>

    <string name="title_backup_and_restore">Backup and Restore</string>
    <string name="restorePasswordsSuccess">Successfully restored %s passwords</string>
    <string name="restore_passwords_button_text">Restore Passwords</string>
    <string name="backup_passwords_button_text">Backup Passwords</string>
    <string name="backup_passwords_info">- You can export your current passwords and save it in your device as a .txt file.\n - You can use it to import passwords later on any device you want.</string>
    <string name="restore_passwords_info">- Choose Passworx\'s .txt file from your device and import passwords.</string>
</resources>