<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/fragment_tools_margin"
    android:layout_marginEnd="@dimen/fragment_tools_margin"
    tools:context=".ui.tools.ToolsFragment">

    <com.gvelesiani.passmanager.customViews.CustomToolsView
        android:id="@+id/toolGeneratePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:setImageDrawable="@drawable/ic_generate"
        app:setSubTitle="@string/generate_tool_sub_title"
        app:setTitle="@string/generate_tool_title" />

    <com.gvelesiani.passmanager.customViews.CustomToolsView
        android:id="@+id/toolCheckPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolGeneratePassword"
        app:setImageDrawable="@drawable/ic_health"
        app:setSubTitle="@string/check_tool_sub_title"
        app:setTitle="@string/check_tool_title" />
</androidx.constraintlayout.widget.ConstraintLayout>