<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.gvelesiani.passworx.customViews.ToolbarView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="@dimen/dimen_0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:setToolbarImage="@drawable/ic_app_icon"
        app:setToolbarTitle="@string/app_name" />

    <com.gvelesiani.passworx.customViews.OverviewItemView
        android:id="@+id/ctVault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:setImageDrawable="@drawable/ic_passwords"
        app:setSubTitle="Passwords of your favorite websites &amp; apps"
        app:setTitle="Vault" />

    <com.gvelesiani.passworx.customViews.OverviewItemView
        android:id="@+id/ctBrowse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ctVault"
        app:setImageDrawable="@drawable/ic_browse"
        app:setSubTitle="Browse favorites, trash"
        app:setTitle="@string/title_browse" />

    <com.gvelesiani.passworx.customViews.OverviewItemView
        android:id="@+id/ctGenerate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ctBrowse"
        app:setImageDrawable="@drawable/ic_generate"
        app:setSubTitle="Generate strong passwords"
        app:setTitle="@string/title_password_generator" />

    <com.gvelesiani.passworx.customViews.OverviewItemView
        android:id="@+id/ctSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ctGenerate"
        app:setImageDrawable="@drawable/ic_settings"
        app:setSubTitle="Master Password, screenshots, biometriX"
        app:setTitle="@string/title_settings" />

    <com.gvelesiani.passworx.customViews.OverviewItemView
        android:id="@+id/ctBackupAndRestore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:setImageDrawable="@drawable/ic_backup"
        app:layout_constraintTop_toBottomOf="@id/ctSettings"
        app:setSubTitle="You can backup or restore passwords from generated files"
        app:setTitle="@string/title_backup_and_restore" />

</androidx.constraintlayout.widget.ConstraintLayout>