<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?bg_color">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivIntro"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_20dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_intro_third_step" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvIntroTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_20dp"
        android:gravity="start"
        android:text="@string/intro_third_step_title"
        android:textColor="?text_color"
        android:textSize="@dimen/dimen_26sp"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvIntroSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:layout_marginEnd="@dimen/dimen_20dp"
        android:gravity="start"
        android:text="@string/intro_third_step_subtitle"
        android:textColor="?secondary_text_color"
        android:textSize="@dimen/dimen_20sp"
        app:layout_constraintTop_toBottomOf="@id/tvIntroTitle" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/svTakeScreenshots"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_15dp"
        android:checked="true"
        android:fontFamily="@font/regular"
        android:text="@string/settings_take_screenshots"

        android:textColor="?attr/text_color"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvIntroSubtitle"
        app:layout_constraintStart_toStartOf="@+id/tvIntroSubtitle"
        app:layout_constraintTop_toBottomOf="@+id/tvIntroSubtitle"
        app:thumbTint="?attr/accent_color"
        app:trackTint="?attr/accent_transparent_color" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/takeInAppScreenshotsInfo"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:text="@string/take_in_app_screenshots_info"
        app:layout_constraintEnd_toEndOf="@+id/svTakeScreenshots"
        app:layout_constraintStart_toStartOf="@+id/svTakeScreenshots"
        app:layout_constraintTop_toBottomOf="@id/svTakeScreenshots" />


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/svUnlockWithBiometrics"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:checked="true"
        android:fontFamily="@font/regular"
        android:text="@string/settings_unlock_with_biometrics"
        android:textColor="?attr/text_color"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintEnd_toEndOf="@+id/tvIntroSubtitle"
        app:layout_constraintStart_toStartOf="@+id/tvIntroSubtitle"
        app:layout_constraintTop_toBottomOf="@+id/takeInAppScreenshotsInfo"
        app:thumbTint="?attr/accent_color"
        app:trackTint="?attr/accent_transparent_color" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/unlockWithBiometricsInfo"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:text="@string/unlock_with_biometrics_info"
        app:layout_constraintEnd_toEndOf="@id/svUnlockWithBiometrics"
        app:layout_constraintStart_toStartOf="@+id/svUnlockWithBiometrics"
        app:layout_constraintTop_toBottomOf="@+id/svUnlockWithBiometrics" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>