<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gvelesiani.passmanager.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_passwords"
            app:destination="@id/navigation_passwords" />
    </fragment>

    <fragment
        android:id="@+id/navigation_passwords"
        android:name="com.gvelesiani.passmanager.ui.passwords.PasswordsFragment"
        android:label="@string/title_passwords"
        tools:layout="@layout/fragment_passwords" >
        <action
            android:id="@+id/action_navigation_passwords_to_navigation_password_checker"
            app:destination="@id/navigation_tools" />
    </fragment>

    <fragment
        android:id="@+id/navigation_tools"
        android:name="com.gvelesiani.passmanager.ui.tools.ToolsFragment"
        android:label="@string/title_tools"
        tools:layout="@layout/fragment_tools" >
        <action
            android:id="@+id/action_navigation_tools_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_tools_to_passwordGeneratorFragment"
            app:destination="@id/passwordGeneratorFragment" />
    </fragment>
    <fragment
        android:id="@+id/passwordGeneratorFragment"
        android:name="com.gvelesiani.passmanager.ui.passwordGenerator.PasswordGeneratorFragment"
        android:label="@string/title_password_generator"
        tools:layout="@layout/fragment_password_generator">
        <action
            android:id="@+id/action_passwordGeneratorFragment_to_navigation_tools"
            app:destination="@id/navigation_tools" />
    </fragment>
</navigation>