<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPassword"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_0dp"
        android:layout_margin="@dimen/size_25dp"
        android:background="@drawable/generated_password_background"
        android:gravity="start"
        android:paddingStart="@dimen/size_15dp"
        android:paddingTop="@dimen/size_15dp"
        android:paddingEnd="@dimen/size_15dp"
        android:textColor="@color/dark_text_color"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sliderMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_generator_slider_min_value"
        android:textColor="@color/dark_text_color"
        android:textSize="@dimen/text_size_20sp"
        app:layout_constraintBottom_toBottomOf="@+id/sbPasswordGenerator"
        app:layout_constraintStart_toStartOf="@+id/tvPassword"
        app:layout_constraintTop_toTopOf="@+id/sbPasswordGenerator" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/sliderMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_generator_slider_max_value"
        android:textColor="@color/dark_text_color"
        android:textSize="@dimen/text_size_20sp"
        app:layout_constraintBottom_toBottomOf="@+id/sbPasswordGenerator"
        app:layout_constraintEnd_toEndOf="@+id/tvPassword"
        app:layout_constraintTop_toTopOf="@+id/sbPasswordGenerator" />

    <com.google.android.material.slider.Slider
        android:id="@+id/sbPasswordGenerator"
        style="@style/CustomSeekbar"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:stepSize="1.0"
        android:valueFrom="8.0"
        android:valueTo="32.0"
        app:layout_constraintEnd_toStartOf="@+id/sliderMax"
        app:layout_constraintStart_toEndOf="@id/sliderMin"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/smUseCapitalLetters"
        app:layout_constraintStart_toStartOf="@+id/smUseCapitalLetters"
        app:layout_constraintTop_toBottomOf="@+id/smUseCapitalLetters" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/smUseCapitalLetters"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_15dp"
        android:checked="true"
        android:text="@string/generate_password_use_capital_letters_setting"
        app:layout_constraintEnd_toEndOf="@+id/sliderMax"
        app:layout_constraintStart_toStartOf="@+id/sliderMin"
        app:layout_constraintTop_toBottomOf="@+id/sbPasswordGenerator"
        app:thumbTint="@color/blue"
        app:trackTint="@color/light_blue" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/smUseNumbers"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/generate_password_use_numbers_setting"
        app:layout_constraintEnd_toEndOf="@+id/smUseCapitalLetters"
        app:layout_constraintStart_toStartOf="@+id/smUseCapitalLetters"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider"
        app:thumbTint="@color/blue"
        app:trackTint="@color/light_blue" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider2"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/smUseNumbers"
        app:layout_constraintStart_toStartOf="@+id/smUseNumbers"
        app:layout_constraintTop_toBottomOf="@+id/smUseNumbers" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/smUseSymbols"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/generate_password_use_capital_symbols_setting"
        app:layout_constraintEnd_toEndOf="@+id/smUseNumbers"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/smUseNumbers"
        app:layout_constraintTop_toBottomOf="@+id/materialDivider2"
        app:thumbTint="@color/blue"
        app:trackTint="@color/light_blue" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_copy_generated_password"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_25dp"
        android:layout_marginEnd="@dimen/size_25dp"
        android:layout_marginBottom="@dimen/size_30dp"
        android:background="@drawable/copy_password_button_background"
        android:text="@string/copy_password_button_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />


</androidx.constraintlayout.widget.ConstraintLayout>